--- a/style.css
+++ b/style.css
@@ -21,3 +21,9 @@ font-size: 30px;
     text-align: center;
 font-size: 30px;    
 }
+
+.texto3 {
+    color:rgb(20, 20, 109);
+    background-color: aliceblue;
+    
+}
