--- a/style.css
+++ b/style.css
@@ -25,5 +25,21 @@ font-size: 30px;
 .texto3 {
     color:rgb(20, 20, 109);
     background-color: aliceblue;
-    
+    text-align: center;
+font-size: 30px;
 }
+
+.texto4 {
+    color:rgb(20, 20, 109);
+    background-color:aliceblue;
+    text-align: center;
+font-size: 30px;
+}
+
+.texto5 {
+    color:rgb(20, 20, 109);
+    background-color:aliceblue;
+    text-align: center;
+font-size: 30px;
+}
+
